--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,23 @@ Title: Graph-Based Clustering
 Version: 1.0.0
 Author: Fritz Bayer, Jack Kuipers
 Maintainer: Fritz Bayer <frbayer@ethz.ch>
-Description: Clustering using a Bayesian network mixture model
+Description: Graph-based clustering of binary data using a Bayesian network mixture model and optional covariate adjustment.
 License: GPL-3
+URL: https://github.com/fritzbayer/graphClust
+Depends:
+    R (>= 3.5.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+Imports: 
+    ggplot2,
+    reshape2,
+    BiDAG (>= 2.0.2),
+    pcalg,
+    RBGL,
+    clue,
+    grDevices
