--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: graphClust
+Package: netClust
 Type: Package
-Title: Graph-Based Clustering
+Title: Network-Based Clustering
 Version: 1.0.0
 Author: Fritz Bayer, Jack Kuipers
 Maintainer: Fritz Bayer <frbayer@ethz.ch>
-Description: Graph-based clustering of binary data using a Bayesian network mixture model and optional covariate adjustment.
+Description: Network-based clustering of binary data using a Bayesian network mixture model and optional covariate adjustment.
 License: GPL-3
-URL: https://github.com/fritzbayer/graphClust
+URL: https://github.com/fritzbayer/netClust
 Depends:
     R (>= 3.5.0)
 Encoding: UTF-8
