added nested parallelisation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(bestAICsearch)
 export(netClust)
+export(netClustParallel)
 export(netCluster)
 export(netClusterParallel)
 export(sampleData)
