added plot for clusters and updated man

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(get_clusters)
 export(netClustParallel)
 export(netCluster)
 export(netClusterParallel)
+export(plot_clusters)
 export(sampleData)
 importFrom(BiDAG,graph2m)
 importFrom(BiDAG,m2graph)
