added categorical score functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(netClustParallel)
 export(netCluster)
 export(netClusterParallel)
 export(sampleData)
+export(scoreagainstDAG)
+export(scoreparameters)
 importFrom(BiDAG,graph2m)
 importFrom(BiDAG,m2graph)
 importFrom(RBGL,tsort)
