added categorical clustering without edges

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,110 @@ netClust.Rproj
 .Rhistory
 .Rhistory
 .Rhistory
+.Rhistory
+euler_cluster/run_euler.sh
+euler_cluster/get_best_seed.R
+euler_cluster/eurler_cluster_script.R
+euler_cluster/euler_scripts/cluster_euler_seed99.R
+euler_cluster/euler_scripts/cluster_euler_seed98.R
+euler_cluster/euler_scripts/cluster_euler_seed97.R
+euler_cluster/euler_scripts/cluster_euler_seed96.R
+euler_cluster/euler_scripts/cluster_euler_seed95.R
+euler_cluster/euler_scripts/cluster_euler_seed94.R
+euler_cluster/euler_scripts/cluster_euler_seed93.R
+euler_cluster/euler_scripts/cluster_euler_seed92.R
+euler_cluster/euler_scripts/cluster_euler_seed91.R
+euler_cluster/euler_scripts/cluster_euler_seed90.R
+euler_cluster/euler_scripts/cluster_euler_seed9.R
+euler_cluster/euler_scripts/cluster_euler_seed89.R
+euler_cluster/euler_scripts/cluster_euler_seed88.R
+euler_cluster/euler_scripts/cluster_euler_seed87.R
+euler_cluster/euler_scripts/cluster_euler_seed86.R
+euler_cluster/euler_scripts/cluster_euler_seed85.R
+euler_cluster/euler_scripts/cluster_euler_seed84.R
+euler_cluster/euler_scripts/cluster_euler_seed83.R
+euler_cluster/euler_scripts/cluster_euler_seed82.R
+euler_cluster/euler_scripts/cluster_euler_seed81.R
+euler_cluster/euler_scripts/cluster_euler_seed80.R
+euler_cluster/euler_scripts/cluster_euler_seed8.R
+euler_cluster/euler_scripts/cluster_euler_seed79.R
+euler_cluster/euler_scripts/cluster_euler_seed78.R
+euler_cluster/euler_scripts/cluster_euler_seed77.R
+euler_cluster/euler_scripts/cluster_euler_seed76.R
+euler_cluster/euler_scripts/cluster_euler_seed75.R
+euler_cluster/euler_scripts/cluster_euler_seed74.R
+euler_cluster/euler_scripts/cluster_euler_seed73.R
+euler_cluster/euler_scripts/cluster_euler_seed72.R
+euler_cluster/euler_scripts/cluster_euler_seed71.R
+euler_cluster/euler_scripts/cluster_euler_seed70.R
+euler_cluster/euler_scripts/cluster_euler_seed7.R
+euler_cluster/euler_scripts/cluster_euler_seed69.R
+euler_cluster/euler_scripts/cluster_euler_seed68.R
+euler_cluster/euler_scripts/cluster_euler_seed67.R
+euler_cluster/euler_scripts/cluster_euler_seed66.R
+euler_cluster/euler_scripts/cluster_euler_seed65.R
+euler_cluster/euler_scripts/cluster_euler_seed64.R
+euler_cluster/euler_scripts/cluster_euler_seed63.R
+euler_cluster/euler_scripts/cluster_euler_seed62.R
+euler_cluster/euler_scripts/cluster_euler_seed61.R
+euler_cluster/euler_scripts/cluster_euler_seed60.R
+euler_cluster/euler_scripts/cluster_euler_seed6.R
+euler_cluster/euler_scripts/cluster_euler_seed59.R
+euler_cluster/euler_scripts/cluster_euler_seed58.R
+euler_cluster/euler_scripts/cluster_euler_seed57.R
+euler_cluster/euler_scripts/cluster_euler_seed56.R
+euler_cluster/euler_scripts/cluster_euler_seed55.R
+euler_cluster/euler_scripts/cluster_euler_seed54.R
+euler_cluster/euler_scripts/cluster_euler_seed53.R
+euler_cluster/euler_scripts/cluster_euler_seed52.R
+euler_cluster/euler_scripts/cluster_euler_seed51.R
+euler_cluster/euler_scripts/cluster_euler_seed50.R
+euler_cluster/euler_scripts/cluster_euler_seed5.R
+euler_cluster/euler_scripts/cluster_euler_seed49.R
+euler_cluster/euler_scripts/cluster_euler_seed48.R
+euler_cluster/euler_scripts/cluster_euler_seed47.R
+euler_cluster/euler_scripts/cluster_euler_seed46.R
+euler_cluster/euler_scripts/cluster_euler_seed45.R
+euler_cluster/euler_scripts/cluster_euler_seed44.R
+euler_cluster/euler_scripts/cluster_euler_seed43.R
+euler_cluster/euler_scripts/cluster_euler_seed42.R
+euler_cluster/euler_scripts/cluster_euler_seed41.R
+euler_cluster/euler_scripts/cluster_euler_seed40.R
+euler_cluster/euler_scripts/cluster_euler_seed4.R
+euler_cluster/euler_scripts/cluster_euler_seed39.R
+euler_cluster/euler_scripts/cluster_euler_seed38.R
+euler_cluster/euler_scripts/cluster_euler_seed37.R
+euler_cluster/euler_scripts/cluster_euler_seed36.R
+euler_cluster/euler_scripts/cluster_euler_seed35.R
+euler_cluster/euler_scripts/cluster_euler_seed34.R
+euler_cluster/euler_scripts/cluster_euler_seed33.R
+euler_cluster/euler_scripts/cluster_euler_seed32.R
+euler_cluster/euler_scripts/cluster_euler_seed31.R
+euler_cluster/euler_scripts/cluster_euler_seed30.R
+euler_cluster/euler_scripts/cluster_euler_seed3.R
+euler_cluster/euler_scripts/cluster_euler_seed29.R
+euler_cluster/euler_scripts/cluster_euler_seed28.R
+euler_cluster/euler_scripts/cluster_euler_seed27.R
+euler_cluster/euler_scripts/cluster_euler_seed26.R
+euler_cluster/euler_scripts/cluster_euler_seed25.R
+euler_cluster/euler_scripts/cluster_euler_seed24.R
+euler_cluster/euler_scripts/cluster_euler_seed23.R
+euler_cluster/euler_scripts/cluster_euler_seed22.R
+euler_cluster/euler_scripts/cluster_euler_seed21.R
+euler_cluster/euler_scripts/cluster_euler_seed20.R
+euler_cluster/euler_scripts/cluster_euler_seed2.R
+euler_cluster/euler_scripts/cluster_euler_seed19.R
+euler_cluster/euler_scripts/cluster_euler_seed18.R
+euler_cluster/euler_scripts/cluster_euler_seed17.R
+euler_cluster/euler_scripts/cluster_euler_seed16.R
+euler_cluster/euler_scripts/cluster_euler_seed15.R
+euler_cluster/euler_scripts/cluster_euler_seed14.R
+euler_cluster/euler_scripts/cluster_euler_seed13.R
+euler_cluster/euler_scripts/cluster_euler_seed12.R
+euler_cluster/euler_scripts/cluster_euler_seed11.R
+euler_cluster/euler_scripts/cluster_euler_seed100.R
+euler_cluster/euler_scripts/cluster_euler_seed10.R
+euler_cluster/euler_scripts/cluster_euler_seed1.R
+euler_cluster/create_scripts.R
+euler_cluster/cluster_script copy.R
+.Rhistory
