--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(bestAICsearch)
 export(bestAICsearch_test)
 export(get_clusters)
 export(get_clusters_bernoulli)
+export(nice_DAG_plot)
+export(plot_clusters)
 export(sampleData)
 export(scoreagainstDAG)
 export(scoreparameters)
