--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Encoding: UTF-8
 RoxygenNote: 7.2.3
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Imports: 
     ggplot2,
@@ -23,3 +24,4 @@ Imports:
     clue,
     grDevices,
     graph
+Config/testthat/edition: 3
