made better for CRAN, yet BiDAG functions not ideal yet

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.0.1
 Author: Fritz Bayer, Jack Kuipers
 Maintainer: Fritz Bayer <frbayer@ethz.ch>
 Description: Network-based clustering using a Bayesian network mixture model with optional covariate adjustment.
-License: GPL-3
+License: GPL-3 | file LICENSE
 Depends:
     R (>= 3.5.0)
 Encoding: UTF-8
@@ -16,12 +16,15 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Imports: 
-    ggplot2,
-    reshape2,
     BiDAG (>= 2.0.2),
     pcalg,
     RBGL,
     clue,
     grDevices,
-    graph
+    graph,
+    ggplot2,
+    reshape2,
+    igraph,
+    ggraph,
+    ggpubr
 Config/testthat/edition: 3
