--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,18 @@ import(ggplot2)
 importFrom(BiDAG,graph2m)
 importFrom(BiDAG,m2graph)
 importFrom(RBGL,tsort)
+importFrom(ggpubr,ggarrange)
+importFrom(ggraph,circle)
+importFrom(ggraph,geom_edge_arc)
+importFrom(ggraph,geom_node_point)
+importFrom(ggraph,geom_node_text)
+importFrom(ggraph,ggraph)
 importFrom(grDevices,rgb)
+importFrom(igraph,V)
+importFrom(igraph,graph_from_adjacency_matrix)
 importFrom(pcalg,randDAG)
 importFrom(reshape2,melt)
+importFrom(stats,cov)
+importFrom(stats,cov.wt)
 importFrom(stats,rbinom)
 importFrom(stats,runif)
