added density plots included BiDAG categorical part properly

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,13 @@ RoxygenNote: 7.2.3
 Suggests: 
     knitr,
     rmarkdown,
+    ggraph,
+    ggpubr,
+    ggplot2,
+    grDevices,
+    reshape2,
+    car,
+    ks,
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Imports: 
@@ -20,11 +27,7 @@ Imports:
     pcalg,
     RBGL,
     clue,
-    grDevices,
+    methods,
     graph,
-    ggplot2,
-    reshape2,
-    igraph,
-    ggraph,
-    ggpubr
+    igraph
 Config/testthat/edition: 3
