--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ euler_cluster/euler_scripts/cluster_euler_seed1.R
 euler_cluster/create_scripts.R
 euler_cluster/cluster_script copy.R
 .Rhistory
+.Rhistory
